--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1567,107 +1567,107 @@ stories:
   domain: http://www.timesnewspapers.com/
   link: https://www.timesnewspapers.com/webster-kirkwoodtimes/trains-hit-car-on-tracks-but-no-one-injured/article_e1158de6-265f-11ea-ba65-3fbd2272cd39.html
 images:
-- name: blossombar-gan-vogh-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-00-00.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-graham-sutherland.png
-- name: old-door-lock-old-door-lock-2-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alien-goggles.jpg
-- name: copper-circuit-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-open-statue.jpg
-- name: white-house-whitehouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-post-modern.jpg
-- name: trucksilo-trucksilo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-green-zuma.jpg
-- name: mediterranean-mediterranean-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-creativity.jpg
-- name: fence-mexico-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-matrix.jpg
-- name: nazi-invasion-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grafitti-woman-bangs.jpg
-- name: power-lines-power-lines-empty-space-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-jap-dys-1.jpg
-- name: nazi-invasion-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-- name: bf-skinner-statue-architecture-holding.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-architecture-holding.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-- name: old-granary-field-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
-- name: yosemite-yosemite-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
-- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-- name: white-house-lawn-white-house-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-collage.jpg
-- name: beach-rocks-beach-rocks-currents-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-emily-carr.jpg
-- name: bordercrossing-bordercrossing-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still-1200.jpg
-- name: liberty-back-statue-liberty-back-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-dream.jpg
-- name: bf-skinner-statue-face-looking-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-face-looking-up.jpg
-- name: catacombs-catacombs-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-pond.jpg
-- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-- name: miamibeach-miamibeach-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-granite.jpg
-- name: nazi-invasion-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-small-town-station.jpg
-- name: legal-statue-legalstatue-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-wols.jpg
-- name: miamibeach-miamibeach-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-pablo-blue.jpg
-- name: amusement-park-amusement-park-2-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-horiz-circuit.jpg
-- name: old-granary-field-oldhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
-- name: power-lines-power-lines-empty-space-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-brush.jpg
-- name: fence-fence-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-deep-connections.jpg
-- name: beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
-- name: stalin-time-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-people-eating-canal.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-- name: oldroad-old-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-three.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+- name: nazi-invasion-do-not-turn-trolley-car.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-do-not-turn-trolley-car.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-feed-people.jpg
+- name: old-gas-pumps-oldgaspumps-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colored-circuits.jpg
+- name: bluelake-dark-rain-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-38-67.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-rain.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-rain.png
+- name: fence-fence-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smoking-cigarette.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
+- name: nyc-flag-nycflag-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crunch-paper.jpg
+- name: nazi-invasion-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_2971.jpg
+- name: lincoln-memorial-lincolnmemorial-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-far-away.jpg
+- name: docks-docks-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sunday.jpg
+- name: oldsmallboat-oldsmallboat-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
+- name: stories-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-nazi-poster.jpg
+- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
+- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
+- name: dc-statue-dcstatue-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kandinsky-bv.jpg
 - name: mistywoods-babyfoot-aqua.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-aqua.jpg
-- name: bf-skinner-train-subway-125th-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-subway-125th-down-the-line.jpg
-- name: trucksilo-trucksilo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-- name: aws-s3-stories-carryload-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-dali-three.jpg
-- name: abandonedbuildings_blue_granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_granite.jpg
-- name: subway-subway-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
-- name: dragon-desert-desert-dragon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-emily-carr.jpg
-- name: sand-hand-sand-hand-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
+- name: la-muse-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
+- name: eduardo-eduardo-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-hot-spicy.jpg
+- name: old-cabin-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-pablo-blue.jpg
+- name: machine-road-machine-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-paper.jpg
+- name: oldhouse-oldhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-space-pizza.jpg
+- name: stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-shipping-energy-trucking.jpg
+- name: oldcabin-store-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-umberto-bocc.jpg
+- name: mistywoods-babyfoot-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-plentiful.jpg
+- name: art-museum-art-museum-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purple-pond.jpg
+- name: border-crossing-bordercrossing-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
+- name: hollywood-building-hollywood-building-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
+- name: stories-granaryfield-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-granaryfield-dali-three.jpg
+- name: oldsmallboat-oldsmallboat-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-pond.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+- name: art-museum-art-museum-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-internet-numbers.jpg
+- name: bluelake-post-modern-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-38-67.jpg
+- name: lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-horiz-circuit.JPG
+- name: rockingchair-face-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-cinnamon-rolls.jpg
+- name: stalin-time-sailboat-in-front-of-housing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sailboat-in-front-of-housing.jpg
+- name: fence-mexico-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-rainbow-festival.jpg
+- name: store-on-corner-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-bright-sand.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+- name: blossombar-crafty-painting-file-00-00-50-12.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-12.jpg
+- name: curtain-curtain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
+- name: bordercrossing-bordercrossing-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-two.jpg
+- name: miamibeach-miamibeach-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
+- name: stalin-time-rocking-chair-on-porch_36332220150_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-rocking-chair-on-porch_36332220150_o.jpg
+- name: stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: death-valley-death-valley-national-park-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
+- name: nazi-invasion-face-eyes-shut-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-face-eyes-shut-statue.jpg
+- name: status-berlin-status-berlin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-internet-numbers.jpg
 ---
 Santa Visits High Point.&nbsp;Retailers Pleased With Christmas Shopping Season.&nbsp;Why A Personalized Diet Can Help You Achieve Better Results.&nbsp;Home For The Holidays.&nbsp;Protecting Rural Nevadans From Robocalls Is A Priority.&nbsp;Child Safe After Being Taken On Joyride In Stolen Car.&nbsp;Pope Francis Appeals For Prayers For Somalia Blast Victims.&nbsp;Arizona Hosts Dallas Following Shootout Win.&nbsp;
